# beam_gas_collisions

./: .gitignore  .readthedocs.yaml  LEIR_PS_SPS_lifetimes.py  LICENSE  README.md  beam_gas_collisions.py  pyproject.toml  setup.py
Benchmarking/: Beam_lifetime_Pb_fully_stripped_in_SPS.py  Beam_lifetime_Pb_on_Ar_for_PS_MD.py  Beamlifetime_semiempirical_vs_ESR_U28.py  Beamlifetime_semiempirical_vs_FAIR_2018.py  Beamlifetime_semiempirical_vs_SIS18_U28.py  Comparing_semiempirical_with_G_Weber_data.py  Cross_check_vs_Graham_and_Weber_data.py  SPS_ricode_comparison.py  U28_tests_from_Shevelko.py
Calculations/: LEIR_PS_SPS_lifetimes.py
Data/: .~lock.Gas_fractions.csv#  .~lock.Projectile_data.csv#  Gas_fractions.csv  Pressure_data.csv  Projectile_data.csv  dataframe_generator.py
beam_gas_collisions/: __init__.py  beam_gas_collisions.py
benchmarking/: 001_compare_semiempirical_vs_shevelko_U28_experiments.py
calculations_and_benchmarks/: 000_compare_semiempirical_vs_experiments.py  001_compare_semiempirical_vs_shevelko_U28_experiments.py  002_semi_empirical_for_energy_ranges.py
data/: .~lock.pressure_data.csv#  .~lock.projectile_data.csv#  .~lock.projectile_data_full.csv#  beta_functions.csv  boron_gamma_calculator.py  dataframe_generator.py  pressure_data.csv  projectile_data.csv  projectile_data_full.csv
docs/: conf.py  index.rst
examples/: 000_ion_lifetimes.py  000_test_simple_ion_lifetime_on_single_gas.py  0015_leir_ps_extraction_lifetimes.py  001_leir_ps_sps_lifetimes.py  002_emittance_growth_rates.py  003_test_electron_capture_for_energies.py  (+4 more)
(+22 files in other folders)
