[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beam_gas_collisions"
description = "Package to calculate charge-changing cross sections and ion lifetimes across the CERN Ion Injector Chain"
version = "1.1.0"
readme = "README.md"
authors = [
    { name = "Elias Waagaard", email = "elias.walter.waagaard@cern.ch" }
]
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "scipy",
]

[tool.setuptools]
py-modules = ['beam_gas_collisions']
